
cc_library(
	name = "local_function",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_config//:config"
	],
)
