
cc_library(
	name = "local_function",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_typeof//:typeof",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_scope_exit//:scope_exit",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_mpl//:mpl"
	],
)
